--- a/content/en/proposals/146-red25519.md
+++ b/content/en/proposals/146-red25519.md
@@ -13,7 +13,7 @@ implementedin: "0.9.39"
 ## Note
 Network deployment and testing in progress.
 Subject to minor revisions.
-See [SPEC]_ for the official specification.
+See the [official specification](/en/docs/specs/red25519/) for more details.
 
 
 ## Overview
@@ -25,7 +25,7 @@ Destinations, with a slight reduction in efficacy.
 
 ## Motivation
 
-[Prop123]_ defines an encrypted LeaseSet2 format that embodies the Principle of Least
+[Proposal 123](/en/proposals/123-new-netdb-entries/) defines an encrypted LeaseSet2 format that embodies the Principle of Least
 Authority: each network participant is given only the information necessary for their
 role. In particular, an encrypted LeaseSet2 published to a floodfill does not reveal the
 Destination it is for, and the Leases can only be viewed by someone with prior knowledge
@@ -33,7 +33,7 @@ of the Destination. However, floodfills still need to be able to authenticate th
 encrypted LeaseSet2s when they are published, and clients need to additionally ensure
 that the authentication was enforced by the Destination itself.
 
-Prop123 achieves this by blinding the signing keys of Destinations. The blinded keys can
+Proposal 123 achieves this by blinding the signing keys of Destinations. The blinded keys can
 be used to create signatures that are verifiable by floodfills, and clients can be
 certain that only the Destination could have created the signatures. It is therefore
 necessary to specify a signature scheme that can be used for blinding.
@@ -44,7 +44,7 @@ necessary to specify a signature scheme that can be used for blinding.
 ### Core signature scheme
 
 The signature scheme described in this proposal, Red25519, is an instantiation of
-[RedDSA]_, a Schnorr-based signature scheme that supports key re-randomization. It has
+RedDSA, a Schnorr-based signature scheme that supports key re-randomization. It has
 the following functions:
 
 GENERATE_PRIVATE()
@@ -71,11 +71,9 @@ VERIFY(vk, m, sig)
 
 For a given keypair (sk, vk) the following relationship holds:
 
-.. raw:: html
-
-  {% highlight lang='text' %}
+```
 RANDOMIZE_PUBLIC(vk, alpha) == DERIVE_PUBLIC(RANDOMIZE_PRIVATE(sk, alpha))
-{% endhighlight %}
+```
 
 
 ### Converting Ed25519 keys to Red25519
@@ -93,11 +91,9 @@ CONVERT_ED25519_PUBLIC(pubkey)
 
 For a given Ed25519 keypair (privkey, pubkey) the following relationship holds:
 
-.. raw:: html
-
-  {% highlight lang='text' %}
+```
 CONVERT_ED25519_PUBLIC(pubkey) == DERIVE_PUBLIC(CONVERT_ED25519_PRIVATE(privkey))
-{% endhighlight %}
+```
 
 
 ## Specification
@@ -135,13 +131,11 @@ secure against length extension attacks. SHA-512 does not satisfy this on its ow
 remedy this, we require that messages are prefixed with a prefix-free encoding of their
 length:
 
-.. raw:: html
-
-  {% highlight lang='text' %}
+```
 len_u16(M) || M
-{% endhighlight %}
+```
 
-where ``len_u16(M)`` is the 2-byte representation of the length of M, in little-endian
+where `len_u16(M)` is the 2-byte representation of the length of M, in little-endian
 (to be consistent with the little-endian encoding of scalars and points).
 
 Messages must be no longer than 65534 bytes. A length of 65535 is reserved for possible
@@ -151,25 +145,23 @@ future extensions.
 ### Encoding and decoding
 
 Red25519 private keys are scalars mod L, encoded in little-endian representation. We
-define the functions ``DECODE_SCALAR`` and ``ENCODE_SCALAR`` for swapping between the
+define the functions `DECODE_SCALAR` and `ENCODE_SCALAR` for swapping between the
 byte array and integer forms of a scalar.
 
 Red25519 public keys are points on the Edwards form of Curve25519. They are encoded as
 the 255-bit little-endian representation of the y-coordinate, followed by a single bit
 indicating the sign of the x-coordinate. This is the same encoding as for Ed25519. We
-define the functions ``DECODE_POINT`` and ``ENCODE_POINT`` for swapping between the
-bye array and coordinate forms of a point.
+define the functions `DECODE_POINT` and `ENCODE_POINT` for swapping between the
+byte array and coordinate forms of a point.
 
 
 ### RedDSA functions
 
 For ease of implementation, we explicitly write out below the RedDSA functions (as well
 as several helper functions) already specialized for Red25519. Implementors should refer
-to section 5.4.6 of [RedDSA]_ for the general specification of the RedDSA functions.
+to section 5.4.6 of the RedDSA specification for the general specification of the RedDSA functions.
 
-.. raw:: html
-
-  {% highlight lang='text' %}
+```
 HStar(prefix1, prefix2, m) :=
       h = SHA-512()
       h.input("I2P_Red25519H(x)")
@@ -225,14 +217,12 @@ HStar(prefix1, prefix2, m) :=
       vkBytes = ENCODE_POINT(vk)
       c = HStar(Rbytes, vkBytes, m)
       return ((-[S] B) + R + ([c] vk)).multiplyByCofactor().isIdentity()
-{% endhighlight %}
+```
 
 
 ### Conversion functions
 
-.. raw:: html
-
-  {% highlight lang='text' %}
+```
 CONVERT_ED25519_PRIVATE(privkey) :=
       s = SHA-512(privkey)[0..32]
       s[0] = s[0] & 248
@@ -240,11 +230,11 @@ CONVERT_ED25519_PRIVATE(privkey) :=
       return s
 
   CONVERT_ED25519_PUBLIC(pubkey) := pubkey
-{% endhighlight %}
+```
 
-Note that the implementation of ``CONVERT_ED25519_PRIVATE`` is equivalent to the
+Note that the implementation of `CONVERT_ED25519_PRIVATE` is equivalent to the
 computation of the secret scalar s when deriving an Ed25519 public key from an Ed25519
-private key, as specified in in steps 1-3 from section 5.1.5 of [RFC-8032]_.
+private key, as specified in in steps 1-3 from section 5.1.5 of [RFC-8032](https://tools.ietf.org/html/rfc8032).
 
 
 ## Security implications
@@ -285,9 +275,7 @@ been reached.
 
 ## Test vectors
 
-.. raw:: html
-
-  {% highlight lang='text' %}
+```
 Legend:
     edsk:  Ed25519 private key (random)
     edpk:  Ed25519 public key corresponding to edsk
@@ -439,19 +427,4 @@ Legend:
     rvk:   d0c5fe8f83fd42202265efff804a1527c0eb0e1cce9781cf14571cd506eeed36
     rsig:  28e96b6d4251b356e635e382ed89a37e7650d3035f98909e09a6cbe82c13e418
            fddb2106b7b527e198039da7221dae1a0227f0a4ab88f06567e8fd9238acc106
-{% endhighlight %}
-
-
-## References
-
-.. [Prop123]
-   {{ proposal_url('123') }}
-
-.. [RedDSA]
-   https://github.com/zcash/zips/tree/master/protocol/protocol.pdf
-
-.. [RFC-8032]
-   https://tools.ietf.org/html/rfc8032
-
-.. [SPEC]
-    {{ spec_url('red25519') }}
+```
