--- a/content/en/proposals/159-ssu2.md
+++ b/content/en/proposals/159-ssu2.md
@@ -386,9 +386,9 @@ For the client, the value of the Destination Connection ID field in
 its first Initial packet allows it to validate the server address as
 a part of successfully processing any packet.  Initial packets from
 the server are protected with keys that are derived from this value
-(see Section 5.2 of [QUIC-TLS]).  Alternatively, the value is echoed
+(see Section 5.2 of [QUIC-TLS](https://datatracker.ietf.org/doc/html/rfc9001)).  Alternatively, the value is echoed
 by the server in Version Negotiation packets (Section 6) or included
-in the Integrity Tag in Retry packets (Section 5.8 of [QUIC-TLS]).
+in the Integrity Tag in Retry packets (Section 5.8 of [QUIC-TLS](https://datatracker.ietf.org/doc/html/rfc9001)).
 
 Prior to validating the client address, servers MUST NOT send more
 than three times as many bytes as the number of bytes they have
@@ -413,7 +413,7 @@ all the data it has sent.  In this case, when the client has no
 reason to send additional packets, the server will be unable to send
 more data because it has not validated the client's address.  To
 prevent this deadlock, clients MUST send a packet on a Probe Timeout
-(PTO); see Section 6.2 of [QUIC-RECOVERY].  Specifically, the client
+(PTO); see Section 6.2 of [QUIC-RECOVERY](https://datatracker.ietf.org/doc/html/rfc9002).  Specifically, the client
 MUST send an Initial packet in a UDP datagram that contains at least
 1200 bytes if it does not have Handshake keys, and otherwise send a
 Handshake packet.
@@ -789,7 +789,7 @@ Endpoints SHOULD abandon path validation based on a timer.  When
 setting this timer, implementations are cautioned that the new path
 could have a longer round-trip time than the original.  A value of
 three times the larger of the current PTO or the PTO for the new path
-(using kInitialRtt, as defined in [QUIC-RECOVERY]) is RECOMMENDED.
+(using kInitialRtt, as defined in [QUIC-RECOVERY](https://datatracker.ietf.org/doc/html/rfc9002)) is RECOMMENDED.
 
 This timeout allows for multiple PTOs to expire prior to failing path
 validation, so that loss of a single PATH_CHALLENGE or PATH_RESPONSE
@@ -828,7 +828,7 @@ process by which an endpoint migrates to a new address.
 The design of QUIC relies on endpoints retaining a stable address for
 the duration of the handshake.  An endpoint MUST NOT initiate
 connection migration before the handshake is confirmed, as defined in
-Section 4.1.2 of [QUIC-TLS].
+Section 4.1.2 of [QUIC-TLS](https://datatracker.ietf.org/doc/html/rfc9001).
 
 If the peer sent the disable_active_migration transport parameter, an
 endpoint also MUST NOT send packets (including probing packets; see
@@ -1035,7 +1035,7 @@ congestion control or RTT estimation for the new path.
 On confirming a peer's ownership of its new address, an endpoint MUST
 immediately reset the congestion controller and round-trip time
 estimator for the new path to initial values (see Appendices A.3 and
-B.3 of [QUIC-RECOVERY]) unless the only change in the peer's address
+B.3 of [QUIC-RECOVERY](https://datatracker.ietf.org/doc/html/rfc9002)) unless the only change in the peer's address
 is its port number.  Because port-only changes are commonly the
 result of NAT rebinding or other middlebox activity, the endpoint MAY
 instead retain its congestion control state and round-trip estimate
@@ -1054,7 +1054,7 @@ frames covering all received packets.
 
 While multiple paths might be used during connection migration, a
 single congestion control context and a single loss recovery context
-(as described in [QUIC-RECOVERY]) could be adequate.  For instance,
+(as described in [QUIC-RECOVERY](https://datatracker.ietf.org/doc/html/rfc9002)) could be adequate.  For instance,
 an endpoint might delay switching to a new congestion control context
 until it is confirmed that an old path is no longer needed (such as
 the case described in Section 9.3.3).
@@ -1067,7 +1067,7 @@ the corresponding PATH_RESPONSE is received.  If the timer fires
 before the PATH_RESPONSE is received, the endpoint might send a new
 PATH_CHALLENGE and restart the timer for a longer period of time.
 This timer SHOULD be set as described in Section 6.2.1 of
-[QUIC-RECOVERY] and MUST NOT be more aggressive.
+[QUIC-RECOVERY](https://datatracker.ietf.org/doc/html/rfc9002) and MUST NOT be more aggressive.
 
 #### Privacy Implications of Connection Migration
 
@@ -1118,12 +1118,12 @@ server is able to associate packets with a zero-length connection ID
 to the right connection, it means that the server is using other
 information to demultiplex packets.  For example, a server might
 provide a unique address to every client -- for instance, using HTTP
-alternative services [ALTSVC].  Information that might allow correct
+alternative services [ALTSVC](https://datatracker.ietf.org/doc/html/rfc7838).  Information that might allow correct
 routing of packets across multiple network paths will also allow
 activity on those paths to be linked by entities other than the peer.
 
 A client might wish to reduce linkability by switching to a new
-connection ID, source UDP port, or IP address (see [RFC8981]) when
+connection ID, source UDP port, or IP address (see [RFC8981](https://datatracker.ietf.org/doc/html/rfc8981)) when
 sending traffic after a period of inactivity.  Changing the address
 from which it sends packets at the same time might cause the server
 to detect a connection migration.  This ensures that the mechanisms
@@ -1269,7 +1269,7 @@ document.  This section provides an informal description of the
 desired security properties as an aid to implementers and to help
 guide protocol analysis.
 
-QUIC assumes the threat model described in [SEC-CONS] and provides
+QUIC assumes the threat model described in [SEC-CONS](https://datatracker.ietf.org/doc/html/rfc9000#section-21) and provides
 protections against many of the attacks that arise from that model.
 
 For this purpose, attacks are divided into passive and active
@@ -1286,7 +1286,7 @@ destination, while an off-path attacker observes the packets but
 cannot prevent the original packet from reaching its intended
 destination.  Both types of attackers can also transmit arbitrary
 packets.  This definition differs from that of Section 3.5 of
-[SEC-CONS] in that an off-path attacker is able to observe packets.
+[SEC-CONS](https://datatracker.ietf.org/doc/html/rfc9000#section-21) in that an off-path attacker is able to observe packets.
 
 Properties of the handshake, protected packets, and connection
 migration are considered separately.
@@ -1294,7 +1294,7 @@ migration are considered separately.
 #### Handshake
 
 The QUIC handshake incorporates the TLS 1.3 handshake and inherits
-the cryptographic properties described in Appendix E.1 of [TLS13].
+the cryptographic properties described in Appendix E.1 of [TLS13](https://datatracker.ietf.org/doc/html/rfc8446).
 Many of the security properties of QUIC depend on the TLS handshake
 providing these properties.  Any attack on the TLS handshake could
 affect QUIC.
@@ -1380,7 +1380,7 @@ to establish a connection.
 Packet protection (Section 12.1) applies authenticated encryption to
 all packets except Version Negotiation packets, though Initial and
 Retry packets have limited protection due to the use of version-
-specific keying material; see [QUIC-TLS] for more details.  This
+specific keying material; see [QUIC-TLS](https://datatracker.ietf.org/doc/html/rfc9001) for more details.  This
 section considers passive and active attacks against protected
 packets.
 
@@ -1653,7 +1653,7 @@ being established.  Such an attacker can potentially send packets
 that will be accepted by QUIC endpoints.  This version of QUIC
 attempts to detect this sort of attack, but it expects that endpoints
 will fail to establish a connection rather than recovering.  For the
-most part, the cryptographic handshake protocol [QUIC-TLS] is
+most part, the cryptographic handshake protocol [QUIC-TLS](https://datatracker.ietf.org/doc/html/rfc9001) is
 responsible for detecting tampering during the handshake.
 
 Endpoints are permitted to use other methods to detect and attempt to
@@ -1700,9 +1700,9 @@ sent.  If an attacker can target a vulnerable service with a
 controlled payload, that service might perform actions that are
 attributed to the attacker's peer but are decided by the attacker.
 
-For example, cross-site request forgery [CSRF] exploits on the Web
+For example, cross-site request forgery [CSRF](https://owasp.org/www-community/attacks/csrf) exploits on the Web
 cause a client to issue requests that include authorization cookies
-[COOKIE], allowing one site access to information and actions that
+[COOKIE](https://datatracker.ietf.org/doc/html/rfc6265), allowing one site access to information and actions that
 are intended to be restricted to a different site.
 
 As QUIC runs over UDP, the primary attack modality of concern is one
@@ -1728,7 +1728,7 @@ powerful and does not have adequate countermeasures, QUIC server
 implementations should assume that attackers can cause them to
 generate arbitrary UDP payloads to arbitrary destinations.  QUIC
 servers SHOULD NOT be deployed in networks that do not deploy ingress
-filtering [BCP38] and also have inadequately secured UDP endpoints.
+filtering [BCP38](https://datatracker.ietf.org/doc/html/rfc2827) and also have inadequately secured UDP endpoints.
 
 Although it is not generally possible to ensure that clients are not
 co-located with vulnerable endpoints, this version of QUIC does not
@@ -1794,7 +1794,7 @@ new connection -- a client will not send other types of packets to a
 destination that does not understand QUIC or is not willing to accept
 a QUIC connection.
 
-Initial packet protection (Section 5.2 of [QUIC-TLS]) makes it
+Initial packet protection (Section 5.2 of [QUIC-TLS](https://datatracker.ietf.org/doc/html/rfc9001)) makes it
 difficult for servers to control the content of Initial packets sent
 by clients.  A client choosing an unpredictable Destination
 Connection ID ensures that servers are unable to control any of the
@@ -1863,7 +1863,7 @@ datagrams.
 This document does not offer specific countermeasures that can be
 implemented by endpoints, aside from the generic measures described
 in Section 21.5.6.  However, countermeasures for address spoofing at
-the network level -- in particular, ingress filtering [BCP38] -- are
+the network level -- in particular, ingress filtering [BCP38](https://datatracker.ietf.org/doc/html/rfc2827) -- are
 especially effective against attacks that use spoofing and originate
 from an external network.
 
@@ -1882,7 +1882,7 @@ fifth byte.
 
 No specific countermeasures are provided for this attack, though
 generic protections (Section 21.5.6) could apply.  In this case,
-ingress filtering [BCP38] is also effective.
+ingress filtering [BCP38](https://datatracker.ietf.org/doc/html/rfc2827) is also effective.
 
 #### Generic Request Forgery Countermeasures
 
@@ -1904,8 +1904,8 @@ depend on these capabilities could offer an option to disable these
 protections.
 
 Similarly, endpoints could regard a change in address to a link-local
-address [RFC4291] or an address in a private-use range [RFC1918] from
-a global, unique-local [RFC4193], or non-private address as a
+address [RFC4291](https://datatracker.ietf.org/doc/html/rfc4291) or an address in a private-use range [RFC1918](https://datatracker.ietf.org/doc/html/rfc1918) from
+a global, unique-local [RFC4193](https://datatracker.ietf.org/doc/html/rfc4193), or non-private address as a
 potential attempt at request forgery.  Endpoints could refuse to use
 these addresses entirely, but that carries a significant risk of
 interfering with legitimate uses.  Endpoints SHOULD NOT refuse to use
@@ -1936,7 +1936,7 @@ sending to an address that has been validated.
 
 #### Slowloris Attacks
 
-The attacks commonly known as Slowloris [SLOWLORIS] try to keep many
+The attacks commonly known as Slowloris [SLOWLORIS](https://owasp.org/www-community/attacks/Slowloris_Attack) try to keep many
 connections to the target endpoint open and hold them open as long as
 possible.  These attacks can be executed against a QUIC endpoint by
 generating the minimum amount of activity necessary to avoid being
@@ -2025,7 +2025,7 @@ error or by dropping packets.
 #### Explicit Congestion Notification Attacks
 
 An on-path attacker could manipulate the value of ECN fields in the
-IP header to influence the sender's rate.  [RFC3168] discusses
+IP header to influence the sender's rate.  [RFC3168](https://datatracker.ietf.org/doc/html/rfc3168) discusses
 manipulations and their effects in more detail.
 
 A limited on-path attacker can duplicate and send packets with
