deleted old files, added new update banner script

--- a/i18n/ar.toml
+++ b/i18n/ar.toml
@@ -187,11 +187,10 @@ troubleshootingGuide = "دليل استكشاف الأخطاء وإصلاحها"
 communitySupport = "دعم المجتمع"
 
 [banner]
-banner_message = "إعلان مهم: رسالة شريطية تجريبية"
-banner_link_text = "معرفة المزيد"
+banner_message = "موقع I2P التجريبي الجديد متاح الآن!"
+banner_link_text = "Learn more"
 banner_link_url = ""
 banner_close = "إغلاق الشريط"
-
 
 [donatePage]
 supportDescription = "I2P هو مشروع مجاني ومفتوح المصدر بدون دعم من الشركات. تساهم تبرعاتك في الحفاظ على البنية التحتية، وتطوير ميزات جديدة، والحفاظ على I2P مجانيًا للجميع."
