--- a/i18n/cs.toml
+++ b/i18n/cs.toml
@@ -190,11 +190,10 @@ troubleshootingGuide = "Příručka pro odstraňování problémů"
 communitySupport = "Podpora komunity"
 
 [banner]
-banner_message = "Důležité oznámení: Příklad bannerové zprávy"
-banner_link_text = "Zjistit více"
+banner_message = "Nová I2P Beta stránka je nyní spuštěna!"
+banner_link_text = "Learn more"
 banner_link_url = ""
 banner_close = "Zavřít banner"
-
 
 [donatePage]
 supportI2p = "💜 Podpora I2P"
