--- a/i18n/de.toml
+++ b/i18n/de.toml
@@ -192,11 +192,10 @@ troubleshootingGuide = "Fehlerbehebungsanleitung"
 communitySupport = "Community Support"
 
 [banner]
-banner_message = "Wichtige Ankündigung: Beispiel-Banner-Nachricht"
-banner_link_text = "Mehr erfahren"
+banner_message = "Neue I2P Beta-Seite ist jetzt online!"
+banner_link_text = "Learn more"
 banner_link_url = ""
 banner_close = "Banner schließen"
-
 
 [donatePage]
 supportI2p = "💜 Unterstützung von I2P"
