--- a/i18n/en.toml
+++ b/i18n/en.toml
@@ -218,9 +218,9 @@ gettingStarted = "Getting Started"
 backToDownloads = "Back to Downloads"
 
 [banner]
-banner_message = "Important announcement: New Poll!"
-banner_link_text = "Take our poll"
-banner_link_url = "#poll"
+banner_message = "New I2P Beta Site is now live!"
+banner_link_text = "Learn more"
+banner_link_url = ""
 banner_close = "Close banner"
 
 [poll]
