--- a/i18n/es.toml
+++ b/i18n/es.toml
@@ -191,11 +191,10 @@ troubleshootingGuide = "Guía de Solución de Problemas"
 communitySupport = "Soporte Comunitario"
 
 [banner]
-banner_message = "Anuncio importante: Mensaje de ejemplo del banner"
-banner_link_text = "Más información"
+banner_message = "¡El nuevo sitio Beta de I2P ya está disponible!"
+banner_link_text = "Learn more"
 banner_link_url = ""
 banner_close = "Cerrar banner"
-
 
 [donatePage]
 supportI2p = "💜 Apoya a I2P"
