--- a/i18n/fr.toml
+++ b/i18n/fr.toml
@@ -192,11 +192,10 @@ troubleshootingGuide = "Guide de dépannage"
 communitySupport = "Soutien Communautaire"
 
 [banner]
-banner_message = "Annonce importante : Message de bannière exemple"
-banner_link_text = "En savoir plus"
+banner_message = "Le nouveau site bêta I2P est maintenant en ligne !"
+banner_link_text = "Learn more"
 banner_link_url = ""
 banner_close = "Fermer la bannière"
-
 
 [donatePage]
 supportI2p = "💜 Soutenir I2P"
