--- a/i18n/hi.toml
+++ b/i18n/hi.toml
@@ -191,11 +191,10 @@ troubleshootingGuide = "समस्या निवारण गाइड"
 communitySupport = "सामुदायिक समर्थन"
 
 [banner]
-banner_message = "महत्वपूर्ण घोषणा: उदाहरण बैनर संदेश"
-banner_link_text = "और जानें"
+banner_message = "नई I2P बीटा साइट अब लाइव है!"
+banner_link_text = "Learn more"
 banner_link_url = ""
 banner_close = "बैनर बंद करें"
-
 
 [donatePage]
 supportI2p = "💜 I2P का समर्थन करें"
