--- a/i18n/ko.toml
+++ b/i18n/ko.toml
@@ -191,11 +191,10 @@ troubleshootingGuide = "문제 해결 가이드"
 communitySupport = "커뮤니티 지원"
 
 [banner]
-banner_message = "중요 공지사항: 예시 배너 메시지"
-banner_link_text = "자세히 보기"
+banner_message = "새로운 I2P 베타 사이트가 오픈되었습니다!"
+banner_link_text = "Learn more"
 banner_link_url = ""
 banner_close = "배너 닫기"
-
 
 [donatePage]
 supportI2p = "💜 I2P 지원"
