--- a/i18n/pt.toml
+++ b/i18n/pt.toml
@@ -191,11 +191,10 @@ troubleshootingGuide = "Guia de Solução de Problemas"
 communitySupport = "Suporte da Comunidade"
 
 [banner]
-banner_message = "Anúncio importante: Mensagem de banner de exemplo"
-banner_link_text = "Saiba mais"
+banner_message = "Novo Site Beta I2P já está no ar!"
+banner_link_text = "Learn more"
 banner_link_url = ""
 banner_close = "Fechar banner"
-
 
 [donatePage]
 supportI2p = "💜 Apoie o I2P"
