--- a/i18n/tr.toml
+++ b/i18n/tr.toml
@@ -191,11 +191,10 @@ troubleshootingGuide = "Sorun Giderme Kılavuzu"
 communitySupport = "Topluluk Desteği"
 
 [banner]
-banner_message = "Önemli duyuru: Örnek banner mesajı"
-banner_link_text = "Daha fazla bilgi"
+banner_message = "Yeni I2P Beta Sitesi artık yayında!"
+banner_link_text = "Learn more"
 banner_link_url = ""
-banner_close = "Banner'ı kapat"
-
+banner_close = "Banner"
 
 [donatePage]
 supportI2p = "💜 I2P'yi Destekleyin"
