--- a/i18n/vi.toml
+++ b/i18n/vi.toml
@@ -189,8 +189,8 @@ troubleshootingGuide = "Hướng dẫn khắc phục sự cố"
 communitySupport = "Hỗ trợ Cộng đồng"
 
 [banner]
-banner_message = "Thông báo quan trọng: Tin nhắn banner mẫu"
-banner_link_text = "Tìm hiểu thêm"
+banner_message = "Trang web I2P Beta mới đã ra mắt!"
+banner_link_text = "Learn more"
 banner_link_url = ""
 banner_close = "Đóng banner"
 
