--- a/i18n/zh.toml
+++ b/i18n/zh.toml
@@ -192,11 +192,10 @@ troubleshootingGuide = "故障排查指南"
 communitySupport = "社区支持"
 
 [banner]
-banner_message = "重要公告:示例横幅消息"
-banner_link_text = "了解更多"
+banner_message = "新的 I2P Beta 网站现已上线！"
+banner_link_text = "Learn more"
 banner_link_url = ""
 banner_close = "关闭横幅"
-
 
 [donatePage]
 supportI2p = "💜 支持 I2P"
