added references to proposals

--- a/content/en/proposals/146-red25519.md
+++ b/content/en/proposals/146-red25519.md
@@ -429,3 +429,11 @@ Legend:
     rsig:  28e96b6d4251b356e635e382ed89a37e7650d3035f98909e09a6cbe82c13e418
            fddb2106b7b527e198039da7221dae1a0227f0a4ab88f06567e8fd9238acc106
 ```
+
+
+## References
+
+* [Prop123](/proposals/123-new-netdb-entries/)
+* [RedDSA](https://github.com/zcash/zips/tree/master/protocol/protocol.pdf)
+* [RFC-8032](https://tools.ietf.org/html/rfc8032)
+* [SPEC](/docs/specs/red25519/)
