--- a/content/en/proposals/159-ssu2.md
+++ b/content/en/proposals/159-ssu2.md
@@ -8032,6 +8032,42 @@ SSU 2
 TODO UNLESS minimum packet size in Session Request and Created is enforced for PMTU.
 
 
+## References
+
+* [Common](/docs/specs/common-structures/)
+* [ECIES](/docs/spec/ecies/)
+* [NetDB](/docs/how/network-database/)
+* [NOISE](https://noiseprotocol.org/noise.html)
+* [Nonces](https://eprint.iacr.org/2019/624.pdf)
+* [NTCP](/docs/transport/ntcp/)
+* [NTCP2](/docs/spec/ntcp2/)
+* [PMTU](https://aura.abdn.ac.uk/bitstream/handle/2164/11693/tma2018_paper57.pdf)
+* [Prop104](/proposals/104-tls-transport/)
+* [Prop109](/proposals/109-pt-transport/)
+* [Prop158](/proposals/158-ipv6-transport-enhancements/)
+* [RFC-2104](https://tools.ietf.org/html/rfc2104)
+* [RFC-3449](https://tools.ietf.org/html/rfc3449)
+* [RFC-3526](https://tools.ietf.org/html/rfc3526)
+* [RFC-5681](https://tools.ietf.org/html/rfc3681)
+* [RFC-5869](https://tools.ietf.org/html/rfc5869)
+* [RFC-6151](https://tools.ietf.org/html/rfc6151)
+* [RFC-6298](https://tools.ietf.org/html/rfc6298)
+* [RFC-6437](https://tools.ietf.org/html/rfc6437)
+* [RFC-7539](https://tools.ietf.org/html/rfc7539)
+* [RFC-7748](https://tools.ietf.org/html/rfc7748)
+* [RFC-7905](https://tools.ietf.org/html/rfc7905)
+* [RFC-9000](https://datatracker.ietf.org/doc/html/rfc9000)
+* [RFC-9001](https://datatracker.ietf.org/doc/html/rfc9001)
+* [RFC-9002](https://datatracker.ietf.org/doc/html/rfc9002)
+* [RouterAddress](/docs/specs/common-structures/#routeraddress)
+* [RouterIdentity](/docs/specs/common-structures/#routeridentity)
+* [SigningPublicKey](/docs/specs/common-structures/#signingpublickey)
+* [SSU](/docs/transport/ssu/)
+* [STS] Diffie, W.; van Oorschot P. C.; Wiener M. J., Authentication and Authenticated Key Exchanges
+* [Ticket1112](https://trac.i2p2.i2p/ticket/1112)
+* [Ticket1849](https://trac.i2p2.i2p/ticket/1849)
+
+
 
 
 
