--- a/content/en/proposals/111-ntcp-2.md
+++ b/content/en/proposals/111-ntcp-2.md
@@ -2359,9 +2359,9 @@ protocol itself.
 * [STS] Diffie, W.; van Oorschot P. C.; Wiener M. J., Authentication and Authenticated Key Exchanges
 * [Ticket1112](https://trac.i2p2.i2p/ticket/1112)
 * [Ticket1849](https://trac.i2p2.i2p/ticket/1849)
-* [1](http://www.chesworkshop.org/ches2009/presentations/01_Session_1/CHES2009_ekasper.pdf) "Faster and Timing-Attack Resistant AES-GCM" by Emilia Käsper and Peter Schwabe
-* [2](https://www.blackhat.com/docs/us-16/materials/us-16-Devlin-Nonce-Disrespecting-Adversaries-Practical-Forgery-Attacks-On-GCM-In-TLS.pdf) "Nonce-Disrespecting Adversaries: Practical Forgery Attacks on GCM in TLS" by H. Böck, A. Zauner, S. Devlin, J. Somorovsky, P. Jovanovic
-* [3](https://eprint.iacr.org/2014/613.pdf) "CAESAR submission: Ketje" by Guido Bertoni, Joan Daemen, Michaël Peeters, Gilles Van Assche, Ronny Van Keer
-* [4](https://www.imperialviolet.org/2013/10/07/chacha20.html) "ChaCha20 and Poly1305 for IETF protocols" by Adam Langley
-* [5](https://tools.ietf.org/html/rfc7539) RFC 7539
+* ["Faster and Timing-Attack Resistant AES-GCM" by Emilia Käsper and Peter Schwabe](http://www.chesworkshop.org/ches2009/presentations/01_Session_1/CHES2009_ekasper.pdf)
+* ["Nonce-Disrespecting Adversaries: Practical Forgery Attacks on GCM in TLS" by H. Böck, A. Zauner, S. Devlin, J. Somorovsky, P. Jovanovic](https://www.blackhat.com/docs/us-16/materials/us-16-Devlin-Nonce-Disrespecting-Adversaries-Practical-Forgery-Attacks-On-GCM-In-TLS.pdf)
+* ["CAESAR submission: Ketje" by Guido Bertoni, Joan Daemen, Michaël Peeters, Gilles Van Assche, Ronny Van Keer](https://eprint.iacr.org/2014/613.pdf)
+* ["ChaCha20 and Poly1305 for IETF protocols" by Adam Langley](https://www.imperialviolet.org/2013/10/07/chacha20.html)
+* [RFC 7539](https://tools.ietf.org/html/rfc7539)
 
