--- a/i18n/ar.toml
+++ b/i18n/ar.toml
@@ -95,8 +95,8 @@ censorshipResistant = "مقاومة للرقابة"
 censorshipResistantDesc = "البنية اللامركزية تجعل الحظر شديد الصعوبة."
 communityDriven = "مدفوعة من المجتمع"
 communityDrivenDesc = "مفتوح المصدر ويتم صيانته بواسطة متطوعين حول العالم."
-fullyDistributed = "توزيع كامل"
-fullyDistributedDesc = "لا توجد خوادم مركزية أو نقاط فشل."
+fullyDistributed = "شبكة لامركزية"
+fullyDistributedDesc = "لا توجد خوادم مركزية تتحكم في التوجيه. يتدفق حركة المرور الخاصة بك عبر شبكة عالمية من الأقران."
 selfContainedNetwork = "شبكة مستقلة"
 selfContainedNetworkDesc = "نظام إيكولوجي كامل للاتصالات الخاصة."
 
