--- a/i18n/cs.toml
+++ b/i18n/cs.toml
@@ -95,8 +95,8 @@ censorshipResistant = "Odolný vůči cenzuře"
 censorshipResistantDesc = "Decentralizovaná architektura činí blokování extrémně obtížným."
 communityDriven = "Řízeno komunitou"
 communityDrivenDesc = "Open source a udržováno dobrovolníky z celého světa."
-fullyDistributed = "Plně distribuovaný"
-fullyDistributedDesc = "Žádné centrální servery ani body selhání."
+fullyDistributed = "Decentralizovaná síť"
+fullyDistributedDesc = "Žádné centrální servery neřídí směrování. Váš provoz proudí globální sítí peerů."
 selfContainedNetwork = "Samostatná síť"
 selfContainedNetworkDesc = "Kompletní ekosystém pro soukromou komunikaci."
 
