--- a/i18n/de.toml
+++ b/i18n/de.toml
@@ -95,8 +95,8 @@ censorshipResistant = "Zensurresistent"
 censorshipResistantDesc = "Dezentrale Architektur macht das Blockieren extrem schwierig."
 communityDriven = "Community-geführt"
 communityDrivenDesc = "Open Source und von freiwilligen Helfern weltweit gepflegt."
-fullyDistributed = "Vollständig verteilt"
-fullyDistributedDesc = "Keine zentralen Server oder Ausfallstellen."
+fullyDistributed = "Dezentrales Netzwerk"
+fullyDistributedDesc = "Keine zentralen Server steuern das Routing. Dein Datenverkehr fließt durch ein globales Netz von Peers."
 selfContainedNetwork = "Autarkes Netzwerk"
 selfContainedNetworkDesc = "Vollständiges Ökosystem für private Kommunikation."
 
