--- a/i18n/en.toml
+++ b/i18n/en.toml
@@ -95,8 +95,8 @@ censorshipResistant = "Censorship Resistant"
 censorshipResistantDesc = "Decentralized architecture makes blocking extremely difficult."
 communityDriven = "Community Driven"
 communityDrivenDesc = "Open source and maintained by volunteers worldwide."
-fullyDistributed = "Fully Distributed"
-fullyDistributedDesc = "No central servers or points of failure."
+fullyDistributed = "Decentralized Network"
+fullyDistributedDesc = "No central servers control routing. Your traffic flows through a global mesh of peers."
 selfContainedNetwork = "Self-Contained Network"
 selfContainedNetworkDesc = "Complete ecosystem for private communication."
 
