--- a/i18n/es.toml
+++ b/i18n/es.toml
@@ -95,8 +95,8 @@ censorshipResistant = "Resistente a la censura"
 censorshipResistantDesc = "La arquitectura descentralizada hace que el bloqueo sea extremadamente difícil."
 communityDriven = "Impulsado por la comunidad"
 communityDrivenDesc = "Código abierto y mantenido por voluntarios de todo el mundo."
-fullyDistributed = "Totalmente distribuido"
-fullyDistributedDesc = "No hay servidores centrales ni puntos de fallo."
+fullyDistributed = "Red descentralizada"
+fullyDistributedDesc = "Ningún servidor central controla el enrutamiento. Tu tráfico fluye a través de una red global de pares."
 selfContainedNetwork = "Red Autocontenida"
 selfContainedNetworkDesc = "Ecosistema completo para la comunicación privada."
 
