--- a/i18n/fr.toml
+++ b/i18n/fr.toml
@@ -95,8 +95,8 @@ censorshipResistant = "Résistant à la censure"
 censorshipResistantDesc = "L'architecture décentralisée rend le blocage extrêmement difficile."
 communityDriven = "Communauté Orientée"
 communityDrivenDesc = "Open source et maintenu par des bénévoles du monde entier."
-fullyDistributed = "Entièrement distribué"
-fullyDistributedDesc = "Aucun serveur central ni point de défaillance."
+fullyDistributed = "Réseau décentralisé"
+fullyDistributedDesc = "Aucun serveur central ne contrôle le routage. Votre trafic transite par un réseau mondial de pairs."
 selfContainedNetwork = "Réseau autonome"
 selfContainedNetworkDesc = "Écosystème complet pour la communication privée."
 
