--- a/i18n/hi.toml
+++ b/i18n/hi.toml
@@ -95,8 +95,8 @@ censorshipResistant = "सेंसरशिप प्रतिरोधी"
 censorshipResistantDesc = "वितरित वास्तुकला ब्लॉक करना अत्यंत कठिन बना देती है।"
 communityDriven = "सामुदायिक संचालित"
 communityDrivenDesc = "ओपन सोर्स और दुनिया भर के स्वयंसेवकों द्वारा बनाए रखा गया।"
-fullyDistributed = "पूरी तरह से वितरित"
-fullyDistributedDesc = "कोई केंद्रीय सर्वर या विफलता के बिंदु नहीं।"
+fullyDistributed = "विकेंद्रित नेटवर्क"
+fullyDistributedDesc = "कोई केंद्रीय सर्वर रूटिंग को नियंत्रित नहीं करता है। आपका ट्रैफ़िक साथियों के वैश्विक जाल के माध्यम से बहता है।"
 selfContainedNetwork = "स्वतंत्र नेटवर्क"
 selfContainedNetworkDesc = "निजी संचार के लिए पूर्ण पारिस्थितिकी तंत्र।"
 
