--- a/i18n/ko.toml
+++ b/i18n/ko.toml
@@ -95,8 +95,8 @@ censorshipResistant = "검열 저항력 있는"
 censorshipResistantDesc = "탈중앙화 아키텍처는 차단을 극도로 어렵게 만듭니다."
 communityDriven = "커뮤니티 주도"
 communityDrivenDesc = "오픈 소스이며 전 세계 자원봉사자들이 관리합니다."
-fullyDistributed = "완전 분산형"
-fullyDistributedDesc = "중앙 서버나 실패 지점이 없습니다."
+fullyDistributed = "분산형 네트워크"
+fullyDistributedDesc = "중앙 서버가 라우팅을 제어하지 않습니다. 트래픽은 글로벌 피어 메시를 통해 흐릅니다."
 selfContainedNetwork = "자체 포함 네트워크"
 selfContainedNetworkDesc = "개인 통신을 위한 완전한 생태계."
 
