--- a/i18n/pt.toml
+++ b/i18n/pt.toml
@@ -95,8 +95,8 @@ censorshipResistant = "Resistente à Censura"
 censorshipResistantDesc = "A arquitetura descentralizada torna o bloqueio extremamente difícil."
 communityDriven = "Conduzido pela Comunidade"
 communityDrivenDesc = "Código aberto e mantido por voluntários em todo o mundo."
-fullyDistributed = "Totalmente Distribuído"
-fullyDistributedDesc = "Sem servidores centrais ou pontos de falha."
+fullyDistributed = "Rede Descentralizada"
+fullyDistributedDesc = "Nenhum servidor central controla o roteamento. Seu tráfego flui através de uma rede global de pares."
 selfContainedNetwork = "Rede Autossuficiente"
 selfContainedNetworkDesc = "Ecossistema completo para comunicação privada."
 
