--- a/i18n/ru.toml
+++ b/i18n/ru.toml
@@ -95,8 +95,8 @@ censorshipResistant = "Устойчивый к цензуре"
 censorshipResistantDesc = "Децентрализованная архитектура делает блокировку чрезвычайно сложной."
 communityDriven = "Управляемый сообществом"
 communityDrivenDesc = "Открытый исходный код, поддерживается добровольцами по всему миру."
-fullyDistributed = "Полностью распределенный"
-fullyDistributedDesc = "Отсутствие центральных серверов или точек отказа."
+fullyDistributed = "Децентрализованная сеть"
+fullyDistributedDesc = "Никакие центральные серверы не контролируют маршрутизацию. Ваш трафик проходит через глобальную сеть равноправных узлов."
 selfContainedNetwork = "Автономная сеть"
 selfContainedNetworkDesc = "Полная экосистема для приватной связи."
 
