--- a/i18n/tr.toml
+++ b/i18n/tr.toml
@@ -95,8 +95,8 @@ censorshipResistant = "Sansüre Dayanıklı"
 censorshipResistantDesc = "Merkezi olmayan mimari, engellemeyi son derece zorlaştırır."
 communityDriven = "Topluluk Odaklı"
 communityDrivenDesc = "Dünya çapında gönüllüler tarafından açık kaynaklı ve bakımı yapılmaktadır."
-fullyDistributed = "Tamamen Dağıtılmış"
-fullyDistributedDesc = "Merkezi sunucular veya arıza noktaları yok."
+fullyDistributed = "Merkezi Olmayan Ağ"
+fullyDistributedDesc = "Hiçbir merkezi sunucu yönlendirmeyi kontrol etmez. Trafiğiniz küresel bir eş ağı üzerinden akar."
 selfContainedNetwork = "Kendine Yetkin Ağ"
 selfContainedNetworkDesc = "Özel iletişim için eksiksiz ekosistem."
 
