--- a/i18n/vi.toml
+++ b/i18n/vi.toml
@@ -95,8 +95,8 @@ censorshipResistant = "Chống kiểm duyệt"
 censorshipResistantDesc = "Kiến trúc phi tập trung khiến việc chặn rất khó khăn."
 communityDriven = "Hướng tới cộng đồng"
 communityDrivenDesc = "Mã nguồn mở và được duy trì bởi các tình nguyện viên trên toàn thế giới."
-fullyDistributed = "Phân phối hoàn toàn"
-fullyDistributedDesc = "Không có máy chủ trung tâm hoặc điểm bị lỗi."
+fullyDistributed = "Mạng phi tập trung"
+fullyDistributedDesc = "Không có máy chủ trung tâm nào kiểm soát định tuyến. Lưu lượng của bạn chảy qua một mạng lưới toàn cầu của các peer."
 selfContainedNetwork = "Mạng độc lập"
 selfContainedNetworkDesc = "Hệ sinh thái hoàn chỉnh cho giao tiếp riêng tư."
 
