--- a/i18n/zh.toml
+++ b/i18n/zh.toml
@@ -95,8 +95,8 @@ censorshipResistant = "抗审查"
 censorshipResistantDesc = "去中心化架构使封锁变得极其困难。"
 communityDriven = "社区驱动"
 communityDrivenDesc = "开源并由全球的志愿者维护。"
-fullyDistributed = "完全分布式"
-fullyDistributedDesc = "没有中央服务器或故障点。"
+fullyDistributed = "去中心化网络"
+fullyDistributedDesc = "没有中央服务器控制路由。您的流量通过全球点对点网络流动。"
 selfContainedNetwork = "自包含网络"
 selfContainedNetworkDesc = "完整的私密通信生态系统。"
 
