WIP: clean up & unit test fixes

--- a/i18n/ar.toml
+++ b/i18n/ar.toml
@@ -161,6 +161,12 @@ mirror = "مرآة"
 mirrorLabel = "مرآة:"
 i2p = "I2P"
 tor = "مستودع APT"
+beta = "تجريبي"
+latest = "الأحدث"
+docker = "دوكر"
+dockerHub = "دوكر هب"
+sourceCode = "كود المصدر"
+torrent = "تورنت"
 allPlatforms = "جميع المنصات"
 windows = "ويندوز"
 download = "تحميل الآن"
@@ -193,6 +199,7 @@ banner_link_url = ""
 banner_close = "إغلاق الشريط"
 
 [donatePage]
+supportI2p = "💜 دعم I2P"
 supportDescription = "I2P هو مشروع مجاني ومفتوح المصدر بدون دعم من الشركات. تساهم تبرعاتك في الحفاظ على البنية التحتية، وتطوير ميزات جديدة، والحفاظ على I2P مجانيًا للجميع."
 donateNow = "💜 تبرع الآن"
 clickToOpenForm = "انقر أعلاه لفتح نموذج التبرع الآمن"
@@ -202,9 +209,11 @@ nextSteps = "الخطوات التالية"
 installI2p = "تثبيت I2P"
 installationGuides = "أدلة التثبيت"
 configureYourBrowser = "إعداد المتصفح الخاص بك"
+browserSetupGuide = "دليل إعداد المتصفح"
 exploreI2pSites = "استكشاف مواقع I2P"
 startBrowsing = "ابدأ تصفح مواقع .i2p"
 getSupport = "الحصول على الدعم"
+forums = "المنتديات"
 irc = "IRC"
 donateWithCrypto = "تبرع بالعملات المشفرة"
 moneroRecommended = "مونيرو (XMR) - موصى به"
@@ -214,6 +223,13 @@ zcashZec = "زكاش (ZEC)"
 viewAllOptions = "عرض جميع خيارات التبرع →"
 gettingStarted = "البدء"
 backToDownloads = "العودة إلى التنزيلات"
+
+[poll]
+title = "استطلاع المجتمع"
+subtitle = "نود أن نسمع منك"
+loading = "تحميل الاستطلاع..."
+close = "إغلاق"
+disclaimer = "يساعد تصويتك في تشكيل مستقبل I2P."
 
 [languages]
 en = "الإنجليزية"
