--- a/i18n/de.toml
+++ b/i18n/de.toml
@@ -162,6 +162,7 @@ mirrorLabel = "Spiegel:"
 torrent = "Torrent"
 i2p = "I2P"
 tor = "Tor"
+latest = "Neueste"
 allPlatforms = "Alle Plattformen"
 windows = "Windows"
 download = "Herunterladen"
@@ -212,6 +213,7 @@ browserSetupGuide = "Anleitung zur Browserkonfiguration"
 exploreI2pSites = "I2P-Seiten erkunden"
 startBrowsing = "Beginnen Sie mit dem Surfen auf .i2p-Seiten"
 getSupport = "Unterstützung erhalten"
+forums = "Foren"
 irc = "IRC"
 donateWithCrypto = "Spenden mit Kryptowährung"
 moneroRecommended = "Monero (XMR) - Empfohlen"
@@ -221,6 +223,13 @@ zcashZec = "Zcash (ZEC)"
 viewAllOptions = "Alle Spendenoptionen anzeigen →"
 gettingStarted = "Erste Schritte"
 backToDownloads = "Zurück zu Downloads"
+
+[poll]
+title = "Community-Umfrage"
+subtitle = "Wir würden uns freuen, von Ihnen zu hören"
+loading = "Umfrage wird geladen..."
+close = "Schließen"
+disclaimer = "Ihre Stimme hilft dabei, die Zukunft von I2P zu gestalten."
 
 [languages]
 en = "Englisch"
