--- a/i18n/fr.toml
+++ b/i18n/fr.toml
@@ -165,6 +165,7 @@ tor = "Tor"
 allPlatforms = "Toutes les plateformes"
 windows = "Windows"
 download = "Télécharger"
+latest = "Dernier"
 beta = "Bêta"
 windowsEasyInstaller = "Installation facile Windows"
 macOsLinuxBsd = "macOS / Linux / BSD"
@@ -208,6 +209,7 @@ nextSteps = "Prochaines étapes"
 installI2p = "Installer I2P"
 installationGuides = "guides d'installation"
 configureYourBrowser = "Configurez votre navigateur"
+browserSetupGuide = "Guide de configuration du navigateur"
 exploreI2pSites = "Explorer les sites I2P"
 startBrowsing = "Commencez à naviguer sur les sites .i2p"
 getSupport = "Obtenir de l'aide"
@@ -221,6 +223,13 @@ zcashZec = "Zcash (ZEC)"
 viewAllOptions = "Voir toutes les options de don →"
 gettingStarted = "Commencer"
 backToDownloads = "Retour aux téléchargements"
+
+[poll]
+title = "Sondage de la communauté"
+subtitle = "Nous aimerions avoir de vos nouvelles"
+loading = "Chargement du sondage..."
+close = "Fermer"
+disclaimer = "Votre vote aide à façonner l'avenir d'I2P."
 
 [languages]
 en = "Anglais"
