--- a/i18n/pt.toml
+++ b/i18n/pt.toml
@@ -162,6 +162,7 @@ mirrorLabel = "Espelho:"
 torrent = "Torrent"
 i2p = "I2P"
 tor = "Tor"
+allPlatforms = "Todas as plataformas"
 windows = "Windows"
 download = "Baixar"
 beta = "Beta"
@@ -175,6 +176,7 @@ installGuide = "Guia de Instalação"
 docker = "Docker"
 latest = "Últimas"
 dockerHub = "Docker Hub"
+sourceCode = "Código fonte"
 buildFromSource = "Compilar a partir do código fonte"
 github = "GitHub"
 installationGuides = "Guias de Instalação"
@@ -207,7 +209,9 @@ nextSteps = "Próximos Passos"
 installI2p = "Instalar I2P"
 installationGuides = "guias de instalação"
 configureYourBrowser = "Configure seu Navegador"
+browserSetupGuide = "Guia de configuração do navegador"
 exploreI2pSites = "Explorar Sites I2P"
+startBrowsing = "Comece a navegar em sites .i2p"
 getSupport = "Obter Suporte"
 forums = "Fóruns"
 irc = "IRC"
@@ -219,6 +223,13 @@ zcashZec = "Zcash (ZEC)"
 viewAllOptions = "Ver todas as opções de doação →"
 gettingStarted = "Começando"
 backToDownloads = "Voltar para Downloads"
+
+[poll]
+title = "Enquete da comunidade"
+subtitle = "Gostaríamos de ouvir sua opinião"
+loading = "Carregando enquete..."
+close = "Fechar"
+disclaimer = "Seu voto ajuda a moldar o futuro do I2P."
 
 [languages]
 en = "Inglês"
