--- a/i18n/tr.toml
+++ b/i18n/tr.toml
@@ -162,6 +162,7 @@ mirrorLabel = "Aynası:"
 torrent = "Torrent"
 i2p = "I2P"
 tor = "Tor"
+allPlatforms = "Tüm Platformlar"
 windows = "Windows"
 download = "İndir"
 beta = "Beta"
@@ -173,6 +174,7 @@ debianUbuntu = "Debian / Ubuntu"
 aptRepository = "APT deposu"
 installGuide = "Kurulum Kılavuzu"
 docker = "Docker"
+latest = "En son"
 dockerHub = "Docker Hub"
 sourceCode = "Kaynak Kodu"
 buildFromSource = "Kaynaktan derleme"
@@ -208,6 +210,7 @@ installI2p = "I2P'yi Kurun"
 installationGuides = "kurulum kılavuzları"
 configureYourBrowser = "Tarayıcınızı Yapılandırın"
 browserSetupGuide = "Tarayıcı ayarları kılavuzu"
+exploreI2pSites = "I2P Sitelerini Keşfedin"
 startBrowsing = ".i2p sitelerinde gezinmeye başlayın"
 getSupport = "Destek Al"
 forums = "Forumlar"
@@ -217,8 +220,16 @@ moneroRecommended = "Monero (XMR) - Tavsiye Edilen"
 privateAndUntraceable = "Özel ve izlenemez"
 bitcoinBtc = "Bitcoin (BTC)"
 zcashZec = "Zcash (ZEC)"
+viewAllOptions = "Tüm bağış seçeneklerini görüntüle →"
 gettingStarted = "Başlarken"
 backToDownloads = "İndirmelere Dön"
+
+[poll]
+title = "Topluluk Anketi"
+subtitle = "Sizden haber almaktan memnuniyet duyarız"
+loading = "Anket yükleniyor..."
+close = "Kapat"
+disclaimer = "Oyunuz I2P'nin geleceğini şekillendirmeye yardımcı olur."
 
 [languages]
 en = "İngilizce"
