--- a/i18n/vi.toml
+++ b/i18n/vi.toml
@@ -162,8 +162,10 @@ mirrorLabel = "Gương:"
 torrent = "Torrent"
 i2p = "I2P"
 tor = "Tor"
+allPlatforms = "Tất cả các nền tảng"
 windows = "Windows"
 download = "Tải xuống ngay"
+latest = "Mới nhất"
 beta = "Beta"
 windowsEasyInstaller = "Trình cài đặt dễ dàng Windows"
 macOsLinuxBsd = "macOS / Linux / BSD"
@@ -174,7 +176,8 @@ aptRepository = "Kho lưu trữ APT"
 installGuide = "Hướng dẫn cài đặt"
 docker = "Docker"
 dockerHub = "Docker Hub"
-sourceCode = "Xây dựng từ mã nguồn"
+sourceCode = "Mã nguồn"
+buildFromSource = "Xây dựng từ mã nguồn"
 github = "GitHub"
 installationGuides = "Hướng dẫn cài đặt"
 windowsInstallation = "Cài đặt Windows"
@@ -219,6 +222,13 @@ zcashZec = "Zcash (ZEC)"
 viewAllOptions = "Xem tất cả các tùy chọn quyên góp →"
 gettingStarted = "Bắt Đầu"
 backToDownloads = "Quay Lại Trang Tải Xuống"
+
+[poll]
+title = "Thăm dò ý kiến cộng đồng"
+subtitle = "Chúng tôi rất muốn nghe ý kiến từ bạn"
+loading = "Đang tải thăm dò ý kiến..."
+close = "Đóng"
+disclaimer = "Phiếu bầu của bạn giúp định hình tương lai của I2P."
 
 [languages]
 en = "Tiếng Anh"
