--- a/i18n/zh.toml
+++ b/i18n/zh.toml
@@ -165,6 +165,7 @@ tor = "Tor"
 allPlatforms = "所有平台"
 windows = "窗口"
 download = "立即下载"
+latest = "最新"
 beta = "测试版"
 windowsEasyInstaller = "Windows Easy Installer"
 macOsLinuxBsd = "macOS / Linux / BSD"
@@ -212,6 +213,7 @@ browserSetupGuide = "浏览器设置指南"
 exploreI2pSites = "探索 I2P 网站"
 startBrowsing = "开始浏览 .i2p 网站"
 getSupport = "获取支持"
+forums = "论坛"
 irc = "IRC"
 donateWithCrypto = "用加密货币捐赠"
 moneroRecommended = "门罗币 (XMR) - 推荐"
@@ -221,6 +223,13 @@ zcashZec = "Zcash (ZEC)"
 viewAllOptions = "查看所有捐赠选项 →"
 gettingStarted = "入门"
 backToDownloads = "返回下载页"
+
+[poll]
+title = "社区投票"
+subtitle = "我们很想听听您的意见"
+loading = "正在加载投票..."
+close = "关闭"
+disclaimer = "您的投票将帮助塑造 I2P 的未来。"
 
 [languages]
 en = "英语"
