--- a/i18n/cs.toml
+++ b/i18n/cs.toml
@@ -155,12 +155,15 @@ freeHavenBib = "Bibliografie anonymity Free Haven"
 
 
 [downloads]
+recommendedForYourSystem = "Doporučeno pro váš systém"
 downloadNow = "Stáhnout nyní"
 mirror = "Zrcadlo:"
 mirrorLabel = "Zrcadlo:"
 torrent = "Torrent"
 i2p = "I2P"
 tor = "Tor"
+allPlatforms = "Všechny platformy"
+latest = "Nejnovější"
 windows = "Windows"
 download = "Stáhnout nyní"
 beta = "Beta"
@@ -210,6 +213,7 @@ browserSetupGuide = "Příručka pro nastavení prohlížeče"
 exploreI2pSites = "Prozkoumat I2P stránky"
 startBrowsing = "Začněte procházet stránky .i2p"
 getSupport = "Získat podporu"
+forums = "Fóra"
 irc = "IRC"
 donateWithCrypto = "Darujte pomocí kryptoměny"
 moneroRecommended = "Monero (XMR) - Doporučeno"
@@ -219,6 +223,13 @@ zcashZec = "Zcash (ZEC)"
 viewAllOptions = "Zobrazit všechny možnosti darování →"
 gettingStarted = "Začínáme"
 backToDownloads = "Zpět ke stažení"
+
+[poll]
+title = "Komunitní anketa"
+subtitle = "Rádi bychom o vás slyšeli"
+loading = "Načítání ankety..."
+close = "Zavřít"
+disclaimer = "Váš hlas pomáhá utvářet budoucnost I2P."
 
 [languages]
 en = "Angličtina"
