--- a/i18n/es.toml
+++ b/i18n/es.toml
@@ -162,6 +162,7 @@ mirrorLabel = "Espejo:"
 torrent = "Torrent"
 i2p = "I2P"
 tor = "Tor"
+allPlatforms = "Todas las plataformas"
 windows = "Instalador fácil de Windows"
 download = "Descargar Ahora"
 beta = "Beta"
@@ -175,6 +176,7 @@ installGuide = "Guía de Instalación"
 docker = "Docker"
 latest = "Último"
 dockerHub = "Docker Hub"
+sourceCode = "Código fuente"
 buildFromSource = "Compilar desde la fuente"
 github = "GitHub"
 installationGuides = "Guías de instalación"
@@ -207,6 +209,7 @@ nextSteps = "Próximos Pasos"
 installI2p = "Instalar I2P"
 installationGuides = "guías de instalación"
 configureYourBrowser = "Configura tu navegador"
+browserSetupGuide = "Guía de configuración del navegador"
 exploreI2pSites = "Explorar sitios de I2P"
 startBrowsing = "Comienza a navegar por sitios .i2p"
 getSupport = "Obtener Soporte"
@@ -220,6 +223,13 @@ zcashZec = "Zcash (ZEC)"
 viewAllOptions = "Ver todas las opciones de donación →"
 gettingStarted = "Empezando"
 backToDownloads = "Volver a Descargas"
+
+[poll]
+title = "Encuesta de la comunidad"
+subtitle = "Nos encantaría saber de ti"
+loading = "Cargando encuesta..."
+close = "Cerrar"
+disclaimer = "Tu voto ayuda a dar forma al futuro de I2P."
 
 [languages]
 en = "Inglés"
