--- a/i18n/hi.toml
+++ b/i18n/hi.toml
@@ -165,6 +165,8 @@ tor = "टॉर"
 allPlatforms = "सभी प्लेटफ़ॉर्म"
 windows = "विंडोज़"
 download = "अभी डाउनलोड करें"
+latest = "नवीनतम"
+beta = "बीटा"
 windowsEasyInstaller = "Windows Easy Installer"
 macOsLinuxBsd = "मैकओएस / लिनक्स / बीएसडी"
 android = "एंड्रॉइड इंस्टॉलेशन"
@@ -208,8 +210,10 @@ installI2p = "I2P स्थापित करें"
 installationGuides = "स्थापना मार्गदर्शिकाएँ"
 configureYourBrowser = "अपने ब्राउज़र को कॉन्फ़िगर करें"
 browserSetupGuide = "ब्राउज़र सेटअप गाइड"
+exploreI2pSites = "I2P साइटों का अन्वेषण करें"
 startBrowsing = ".i2p साइटों पर ब्राउज़िंग शुरू करें"
 getSupport = "सहायता प्राप्त करें"
+forums = "फोरम"
 irc = "IRC"
 donateWithCrypto = "क्रिप्टोकरेन्सी के साथ दान करें"
 moneroRecommended = "मोनेरो (XMR) - अनुशंसित"
@@ -219,6 +223,13 @@ zcashZec = "ज़कैश (ZEC)"
 viewAllOptions = "सभी दान विकल्प देखें →"
 gettingStarted = "शुरुआत करना"
 backToDownloads = "डाउनलोड्स पर वापस"
+
+[poll]
+title = "सामुदायिक पोल"
+subtitle = "हम आपसे सुनना पसंद करेंगे"
+loading = "पोल लोड हो रहा है..."
+close = "बंद करें"
+disclaimer = "आपका वोट I2P के भविष्य को आकार देने में मदद करता है।"
 
 [languages]
 en = "अंग्रेजी"
