--- a/i18n/ko.toml
+++ b/i18n/ko.toml
@@ -165,6 +165,8 @@ tor = "토르"
 allPlatforms = "모든 플랫폼"
 windows = "윈도우즈"
 download = "지금 다운로드"
+latest = "최신 버전"
+beta = "베타"
 windowsEasyInstaller = "윈도우즈 이지 설치 관리자"
 macOsLinuxBsd = "macOS / 리눅스 / BSD"
 android = "안드로이드 설치"
@@ -207,8 +209,11 @@ nextSteps = "다음 단계"
 installI2p = "I2P 설치"
 installationGuides = "설치 가이드"
 configureYourBrowser = "브라우저 구성하기"
+browserSetupGuide = "브라우저 설정 가이드"
+exploreI2pSites = "I2P 사이트 탐색"
 startBrowsing = ".i2p 사이트 탐색 시작"
 getSupport = "지원 요청"
+forums = "포럼"
 irc = "IRC"
 donateWithCrypto = "암호화폐로 기부하기"
 moneroRecommended = "모네로 (XMR) - 권장"
@@ -218,6 +223,13 @@ zcashZec = "Zcash (ZEC)"
 viewAllOptions = "모든 기부 옵션 보기 →"
 gettingStarted = "시작하기"
 backToDownloads = "다운로드로 돌아가기"
+
+[poll]
+title = "커뮤니티 설문 조사"
+subtitle = "귀하의 의견을 듣고 싶습니다"
+loading = "설문 조사 로드 중..."
+close = "닫기"
+disclaimer = "귀하의 투표는 I2P의 미래를 형성하는 데 도움이 됩니다."
 
 [languages]
 en = "영어"
