WIP: cleanup added translated message for proposals fixes #4

--- a/i18n/ar.toml
+++ b/i18n/ar.toml
@@ -235,6 +235,10 @@ loading = "تحميل الاستطلاع..."
 close = "إغلاق"
 disclaimer = "يساعد تصويتك في تشكيل مستقبل I2P."
 
+[translationDisclaimer]
+message = "تم إنشاء هذه الترجمة باستخدام التعلم الآلي وقد لا تكون دقيقة بنسبة 100%."
+viewEnglish = "عرض النسخة الإنجليزية"
+
 [languages]
 en = "الإنجليزية"
 es = "الإسبانية"
