--- a/i18n/cs.toml
+++ b/i18n/cs.toml
@@ -235,6 +235,10 @@ loading = "Načítání ankety..."
 close = "Zavřít"
 disclaimer = "Váš hlas pomáhá utvářet budoucnost I2P."
 
+[translationDisclaimer]
+message = "Tento překlad byl vytvořen pomocí strojového učení a nemusí být 100% přesný."
+viewEnglish = "Zobrazit anglickou verzi"
+
 [languages]
 en = "Angličtina"
 es = "Španělština"
