--- a/i18n/de.toml
+++ b/i18n/de.toml
@@ -235,6 +235,10 @@ loading = "Umfrage wird geladen..."
 close = "Schließen"
 disclaimer = "Ihre Stimme hilft dabei, die Zukunft von I2P zu gestalten."
 
+[translationDisclaimer]
+message = "Diese Übersetzung wurde mittels maschinellem Lernen erstellt und ist möglicherweise nicht 100% korrekt."
+viewEnglish = "Englische Version anzeigen"
+
 [languages]
 en = "Englisch"
 es = "Spanisch"
