--- a/i18n/en.toml
+++ b/i18n/en.toml
@@ -234,6 +234,10 @@ loading = "Loading poll..."
 close = "Close"
 disclaimer = "Your vote helps shape the future of I2P."
 
+[translationDisclaimer]
+message = "This translation was generated using machine learning and may not be 100% accurate."
+viewEnglish = "View English version"
+
 [languages]
 en = "English"
 es = "Spanish"
