--- a/i18n/es.toml
+++ b/i18n/es.toml
@@ -235,6 +235,10 @@ loading = "Cargando encuesta..."
 close = "Cerrar"
 disclaimer = "Tu voto ayuda a dar forma al futuro de I2P."
 
+[translationDisclaimer]
+message = "Esta traducción fue generada mediante aprendizaje automático y puede no ser 100% precisa."
+viewEnglish = "Ver versión en inglés"
+
 [languages]
 en = "Inglés"
 es = "Español"
