--- a/i18n/fr.toml
+++ b/i18n/fr.toml
@@ -235,6 +235,10 @@ loading = "Chargement du sondage..."
 close = "Fermer"
 disclaimer = "Votre vote aide à façonner l'avenir d'I2P."
 
+[translationDisclaimer]
+message = "Cette traduction a été générée par apprentissage automatique et peut ne pas être exacte à 100%."
+viewEnglish = "Voir la version anglaise"
+
 [languages]
 en = "Anglais"
 es = "Espagnol"
