--- a/i18n/hi.toml
+++ b/i18n/hi.toml
@@ -235,6 +235,10 @@ loading = "पोल लोड हो रहा है..."
 close = "बंद करें"
 disclaimer = "आपका वोट I2P के भविष्य को आकार देने में मदद करता है।"
 
+[translationDisclaimer]
+message = "यह अनुवाद मशीन लर्निंग का उपयोग करके उत्पन्न किया गया था और 100% सटीक नहीं हो सकता है।"
+viewEnglish = "अंग्रेज़ी संस्करण देखें"
+
 [languages]
 en = "अंग्रेजी"
 es = "स्पेनिश"
