--- a/i18n/ru.toml
+++ b/i18n/ru.toml
@@ -235,6 +235,10 @@ loading = "Загрузка опроса..."
 close = "Закрыть"
 disclaimer = "Ваш голос помогает формировать будущее I2P."
 
+[translationDisclaimer]
+message = "Этот перевод был создан с помощью машинного обучения и может быть не на 100% точным."
+viewEnglish = "Просмотреть английскую версию"
+
 [languages]
 en = "Английский"
 es = "Испанский"
