--- a/i18n/vi.toml
+++ b/i18n/vi.toml
@@ -235,6 +235,10 @@ loading = "Đang tải thăm dò ý kiến..."
 close = "Đóng"
 disclaimer = "Phiếu bầu của bạn giúp định hình tương lai của I2P."
 
+[translationDisclaimer]
+message = "Bản dịch này được tạo bằng máy học và có thể không chính xác 100%."
+viewEnglish = "Xem phiên bản tiếng Anh"
+
 [languages]
 en = "Tiếng Anh"
 es = "Tiếng Tây Ban Nha"
