--- a/i18n/ko.toml
+++ b/i18n/ko.toml
@@ -235,6 +235,10 @@ loading = "설문 조사 로드 중..."
 close = "닫기"
 disclaimer = "귀하의 투표는 I2P의 미래를 형성하는 데 도움이 됩니다."
 
+[translationDisclaimer]
+message = "이 번역은 기계 학습을 사용하여 생성되었으며 100% 정확하지 않을 수 있습니다."
+viewEnglish = "영어 버전 보기"
+
 [languages]
 en = "영어"
 es = "스페인어"
