--- a/i18n/pt.toml
+++ b/i18n/pt.toml
@@ -235,6 +235,10 @@ loading = "Carregando enquete..."
 close = "Fechar"
 disclaimer = "Seu voto ajuda a moldar o futuro do I2P."
 
+[translationDisclaimer]
+message = "Esta tradução foi gerada usando aprendizado de máquina e pode não ser 100% precisa."
+viewEnglish = "Ver versão em inglês"
+
 [languages]
 en = "Inglês"
 es = "Espanhol"
