--- a/i18n/tr.toml
+++ b/i18n/tr.toml
@@ -235,6 +235,10 @@ loading = "Anket yükleniyor..."
 close = "Kapat"
 disclaimer = "Oyunuz I2P'nin geleceğini şekillendirmeye yardımcı olur."
 
+[translationDisclaimer]
+message = "Bu çeviri makine öğrenimi kullanılarak oluşturulmuştur ve %100 doğru olmayabilir."
+viewEnglish = "İngilizce versiyonu görüntüle"
+
 [languages]
 en = "İngilizce"
 es = "İspanyolca"
