--- a/i18n/zh.toml
+++ b/i18n/zh.toml
@@ -235,6 +235,10 @@ loading = "正在加载投票..."
 close = "关闭"
 disclaimer = "您的投票将帮助塑造 I2P 的未来。"
 
+[translationDisclaimer]
+message = "此翻译是使用机器学习生成的，可能不是100%准确。"
+viewEnglish = "查看英文版本"
+
 [languages]
 en = "英语"
 es = "西班牙语"
