--- a/i18n/ar.toml
+++ b/i18n/ar.toml
@@ -48,7 +48,7 @@ documentationDesc = "ساعد الآخرين على فهم إتش تو بي من
 documentationHub = "مركز الوثائق"
 writingGuidelines = "إرشادات الكتابة"
 contentSuggestions = "اقتراحات المحتوى"
-translation = "ترجمة"
+translationTitle = "ترجمة"
 translationDesc = "اجعل I2P متاحًا لعدد أكبر من الأشخاص من خلال ترجمة الموقع الإلكتروني، وواجهة البرنامج، والوثائق."
 translatorsGuide = "دليل المترجم"
 translationPlatform = "منصة الترجمة"
