--- a/i18n/de.toml
+++ b/i18n/de.toml
@@ -48,7 +48,7 @@ documentationDesc = "Helfen Sie anderen, I2P zu verstehen, indem Sie Anleitungen
 documentationHub = "Dokumentationszentrum"
 writingGuidelines = "Schreibrichtlinien"
 contentSuggestions = "Inhaltliche Vorschläge"
-translation = "Übersetzung"
+translationTitle = "Übersetzung"
 translationDesc = "Machen Sie I2P für mehr Menschen zugänglich, indem Sie die Website, die Softwareoberfläche und die Dokumentation übersetzen."
 translatorsGuide = "Übersetzerhandbuch"
 translationPlatform = "Übersetzungsplattform"
