--- a/i18n/en.toml
+++ b/i18n/en.toml
@@ -48,7 +48,7 @@ documentationDesc = "Help others understand I2P by writing guides, updating docu
 documentationHub = "Documentation Hub"
 writingGuidelines = "Writing Guidelines"
 contentSuggestions = "Content Suggestions"
-translation = "Translation"
+translationTitle = "Translation"
 translationDesc = "Make I2P accessible to more people by translating the website, software interface, and documentation."
 translatorsGuide = "Translator's Guide"
 translationPlatform = "Translation Platform"
