--- a/i18n/es.toml
+++ b/i18n/es.toml
@@ -48,7 +48,7 @@ documentationDesc = "Ayuda a otros a entender I2P escribiendo guías, actualizan
 documentationHub = "Centro de Documentación"
 writingGuidelines = "Directrices de escritura"
 contentSuggestions = "Sugerencias de contenido"
-translation = "Traducción"
+translationTitle = "Traducción"
 translationDesc = "Haz que I2P sea accesible para más personas traduciendo el sitio web, la interfaz del software y la documentación."
 translatorsGuide = "Guía del Traductor"
 translationPlatform = "Plataforma de Traducción"
