--- a/i18n/fr.toml
+++ b/i18n/fr.toml
@@ -48,7 +48,7 @@ documentationDesc = "Aidez les autres à comprendre I2P en rédigeant des guides
 documentationHub = "Centre de Documentation"
 writingGuidelines = "Directives d'écriture"
 contentSuggestions = "Suggestions de contenu"
-translation = "Traduction"
+translationTitle = "Traduction"
 translationDesc = "Rendre I2P accessible à davantage de personnes en traduisant le site web, l'interface logicielle et la documentation."
 translatorsGuide = "Guide du traducteur"
 translationPlatform = "Plateforme de Traduction"
