--- a/i18n/hi.toml
+++ b/i18n/hi.toml
@@ -48,7 +48,7 @@ documentationDesc = "दूसरों को I2P समझने में म
 documentationHub = "प्रलेखन हब"
 writingGuidelines = "लेखन दिशा-निर्देश"
 contentSuggestions = "सामग्री सुझाव"
-translation = "अनुवाद"
+translationTitle = "अनुवाद"
 translationDesc = "I2P को अधिक से अधिक लोगों के लिए उपलब्ध कराने के लिए वेबसाइट, सॉफ़्टवेयर इंटरफ़ेस और दस्तावेज़ों का अनुवाद करें।"
 translatorsGuide = "अनुवादक की मार्गदर्शिका"
 translationPlatform = "अनुवाद मंच"
