--- a/i18n/pt.toml
+++ b/i18n/pt.toml
@@ -48,7 +48,7 @@ documentationDesc = "Ajude outros a entender o I2P escrevendo guias, atualizando
 documentationHub = "Hub de Documentação"
 writingGuidelines = "Diretrizes de Escrita"
 contentSuggestions = "Sugestões de Conteúdo"
-translation = "Tradução"
+translationTitle = "Tradução"
 translationDesc = "Torne o I2P acessível para mais pessoas traduzindo o site, a interface do software e a documentação."
 translatorsGuide = "Guia do Tradutor"
 translationPlatform = "Plataforma de Tradução"
