--- a/i18n/tr.toml
+++ b/i18n/tr.toml
@@ -48,7 +48,7 @@ documentationDesc = "I2P'yi anlamalarına yardımcı olmak için kılavuzlar yaz
 documentationHub = "Dokümantasyon Merkezi"
 writingGuidelines = "Yazım Kılavuzları"
 contentSuggestions = "İçerik Önerileri"
-translation = "Çeviri"
+translationTitle = "Çeviri"
 translationDesc = "İ2P’yi daha fazla kişiye erişilebilir hale getirmek için web sitesini, yazılım arayüzünü ve belgeleri çevirin."
 translatorsGuide = "Çevirmen Kılavuzu"
 translationPlatform = "Çeviri Platformu"
